# Bahamut

./: .gitignore  AGENTS.md  LICENSE  PROJECT_STATE.md  README.md  ROADMAP.md  package-lock.json
.github/workflows/: ci.yml  theia-platform-spike.yml
apps/bahamut-desktop/: index.html  package-lock.json  package.json
apps/bahamut-desktop/src/: App.css  App.tsx  bahamut-frontend-module.ts  bahamut-sidecar-client.ts  bahamut-theme.css  bahamut-widget.ts
apps/bahamut-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/bahamut-desktop/src-tauri/capabilities/: default.json
apps/bahamut-desktop/src-tauri/icons/: icon.icns
apps/bahamut-desktop/src-tauri/src/: catalog.rs  context.rs  lib.rs  main.rs  providers.rs
apps/bahamut-desktop/src-tauri/src/catalog/: mod.rs  models.json
apps/bahamut-desktop/src-tauri/src/commands/: ai.rs  fileops.rs  files.rs  mod.rs  search.rs  security.rs  settings.rs  system.rs
apps/bahamut-desktop/src-tauri/src/database/: chat.rs  mod.rs
apps/bahamut-desktop/src-tauri/src/providers/: mod.rs  ollama.rs
assets/branding/: README.md
docs/: architecture.md  licensing-inventory.md  product-vision.md  security.md
docs/adr/: 001-ide-platform.md  002-theia-platform-rejection.md
docs/vision/: data-intelligence.md  git-workflows.md  observability.md
prototypes/tauri-shell/src/: App.css
prototypes/tauri-shell/src-tauri/: Cargo.toml
services/bahamut-core/: Cargo.toml
services/bahamut-core/src/: main.rs
src/: App.css  App.tsx
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: security.rs
(+34 files in other folders)
