[package]
name = "bahamut-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["http2"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["limit", "timeout"] }
