[package]
name = "bahamut-desktop"
version = "0.1.0"
description = "Bahamut — local-first, permission-driven AI-native development environment"
authors = ["Sami Rahman"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name on Windows,
# see https://github.com/rust-lang/cargo/issues/8519
name = "bahamut_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
regex = "1"
sha2 = "0.10"
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
